# bookmarks-rs

./: .gitignore  .mailmap  Cargo.toml  LICENSE.md  debug.txt
application/: Cargo.toml
application/src/: main.rs
command/: Cargo.toml
command/src/: lib.rs
crates/application/: Cargo.toml
crates/application/src/: main.rs
crates/command/: Cargo.toml
crates/command/src/: lib.rs
crates/derive-test/: Cargo.toml
crates/derive/src/: build_command.rs  lib.rs  storeable.rs
crates/derive/src/storeable/: any_field.rs  conversion_boilerplate.rs  display_implementation.rs  field_list.rs  field_single.rs  parse_attr.rs  parse_field.rs  parse_struct.rs  storeable_impl.rs  trait_impl.rs
crates/export/: Cargo.toml
crates/export/src/: lib.rs  message_pack.rs  xml.rs
crates/gui/: Cargo.toml
crates/gui/src/: app.rs  lib.rs  main.rs  msg.rs  parsed_str.rs  view.rs
crates/gui/src/app/: log_pane.rs  pane.rs  ui.rs  view.rs
crates/gui/src/app/pane/: edit.rs  log.rs  metric.rs  url_map.rs
crates/gui/src/app/ui/: bookmarks_column.rs  category_column.rs  edit_column.rs  log_column.rs
crates/gui/src/app/view/: bookmarks_column.rs  category_column.rs  edit_bookmark_column.rs  edit_category_column.rs  edit_column.rs  log_column.rs  settings_column.rs
crates/gui/src/view/: bookmarks_column.rs  category_column.rs
crates/gui_2/: Cargo.toml
crates/gui_2/src/: main.rs
crates/gui_edit/: Cargo.toml
crates/gui_edit/src/: lib.rs
crates/import/: Cargo.toml
crates/import/src/: html.rs  json.rs  lib.rs  onetab.rs
crates/reference/: Cargo.toml
crates/reference/src/: main.rs
crates/settings/: Cargo.toml
crates/settings/src/: lib.rs
crates/storage/: Cargo.toml
crates/storage/src/: content_string.rs  field.rs  lib.rs  list_field.rs  load.rs  parse_err.rs  pattern_match.rs  property.rs  save.rs  section.rs  storeable.rs  token.rs
derive/: Cargo.toml
derive-test/: Cargo.toml
derive-test/src/: main.rs
derive/src/: build_command.rs  lib.rs  storeable.rs
derive/src/storeable/: any_field.rs  conversion_boilerplate.rs  display_implementation.rs  field_list.rs  field_single.rs  get_name_impl.rs  parse_attr.rs  parse_field.rs  parse_struct.rs  storeable_impl.rs
gui/: Cargo.toml
import/: Cargo.toml
import/src/: html.rs  json.rs  lib.rs  onetab.rs
reference/: Cargo.toml
reference/src/: main.rs
src/: bookmark.rs  category.rs  command.rs  command_map.rs  lib.rs  main.rs  pattern_match.rs  token.rs
src/command/: category.rs  count.rs  filter.rs  list.rs  load.rs  regex.rs  reset.rs  save.rs
src/command/category/: list.rs  load.rs
storage/: Cargo.toml
storage/src/: content_string.rs  field.rs  lib.rs  list_field.rs  load.rs  parse_err.rs  pattern_match.rs  property.rs  save.rs  storeable.rs  token.rs
