[package]
name = "bookmark-gui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bookmark-library = { path = "../library" }
bookmark-command = { path = "../command" }
clap = { version = "4.0.29", features = ["derive"] }
iced = "0.6"
iced_native = "0.7.0"
open = "3.2.0"
ellipse = "0.2.0"
