[package]
name = "bookmark-gui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bookmark-library = { path = "../library" }
bookmark-command = { path = "../command" }
bookmark-storage = { path = "../storage" }
clap = { version = "4.0.29", features = ["derive"] }
iced = { version = "0.6", features = ["tokio", "debug"] }
iced_native = "0.7.0"
open = "3.2.0"
unicode-segmentation = "1.10.0"
aho-corasick = "0.7.20"
time = { version = "0.3.17", features = ["local-offset"] }
