[package]
name = "bookmark-import"
version = "0.1.0"
edition = "2021"

[dependencies]

bookmark-library = { path = "../library" }
bookmark-storage = { path = "../storage" }
bookmark-command = { path = "../command" }
scraper = "0.13.0"
serde = { version = "1.0.147", features = ["derive"]}
serde_json = "1.0.89"
